--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "meteor-spacebars",
+  "repository": { "type": "git", "url": "https://github.com/eface2face/meteor-spacebars" },
   "version": "1.0.0",
   "description": "",
   "main": "spacebars.js",
