--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/eface2face/meteor-spacebars"
   },
-  "version": "1.0.5", 
+ "version": "1.1.0",
   "description": "",
   "main": "spacebars.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "meteor-core": "^1.0.0",
     "meteor-blaze": "^1.0.0",
     "meteor-htmljs": "^1.0.0",
     "meteor-observe-sequence": "^1.0.0",
